Closed Bug 1361903 Opened 8 years ago Closed 8 years ago

Intermittent Assertion failure: count <= mozilla::external::AtomicRefCounted<LibHandle>::refCount(), at mozglue/linker/ElfLoader.h:170

Categories

(Firefox for Android Graveyard :: Audio/Video, defect)

defect
Not set
normal

Tracking

(fennec55+, firefox-esr52 unaffected, firefox53 unaffected, firefox54 unaffected, firefox55 fixed)

RESOLVED FIXED
Firefox 55
Tracking Status
fennec 55+ ---
firefox-esr52 --- unaffected
firefox53 --- unaffected
firefox54 --- unaffected
firefox55 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: esawin)

References

(Blocks 1 open bug)

Details

(Keywords: assertion, intermittent-failure)

Attachments

(1 file)

tracking-fennec: --- → ?
Assignee: nobody → esawin
tracking-fennec: ? → 55+
We should avoid accessing the ref count after releasing. Also, these assertions are prone to race conditions, but the constraint should hold nonetheless given the reversed order of ref count increment in AddDirectRef.
Attachment #8865666 - Flags: review?(mh+mozilla)
Attachment #8865666 - Flags: review?(mh+mozilla) → review+
Pushed by esawin@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/f3cccc3bcd23 [1.0] Move assertion to prevent accessing this after destruction. r=glandium
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 55
Blocks: 1358241
Product: Firefox for Android → Firefox for Android Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: