Bug 1361903 - [1.0] Move assertion to prevent accessing this after destruction. r=glandium